<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textDigiteSalario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelSalario"
            android:textAlignment="viewStart"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/textSalario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelPercentual"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbtValor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbtValor1" />

            <RadioButton
                android:id="@+id/rbtValor2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbtValor2" />

            <RadioButton
                android:id="@+id/rbtValor3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbtValor3" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />

        <Button
            android:id="@+id/btnNovoSalario"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="calcularNovoSalario"
            android:text="@string/btnNovoSalario" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNovoSalario"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/labelNovoSalario"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textResultado"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>